[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2021"
homepage = "https://substrate.io/"
license = "Apache-2.0"
name = "gafi-node"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "gafi-node"

[dependencies]

# Substrate
sc-cli = {workspace = true}
sc-consensus-aura = {workspace = true, optional = true}
sc-consensus-manual-seal = {workspace = true, optional = true}

# Local
game3-node = {path = "game3", default-features = false, optional = true}

[build-dependencies]
substrate-build-script-utils = {workspace = true}

[features]
aura = [
  "sc-consensus-aura",
]
default = ["with-game3"]

std = []

runtime-benchmarks = [
  "game3-node/runtime-benchmarks",
  "aura",
]

with-game3 = [
  "game3-node",
]
