[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
name = "gafi-node"
description = "A fresh FRAME-based Substrate node, ready for hacking."
version = "4.0.0-dev"
build = "build.rs"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "gafi-node"

[dependencies]

# Substrate
sc-cli = { workspace = true }
sc-consensus-aura = { workspace = true, optional = true }
sc-consensus-manual-seal = { workspace = true, optional = true }

# Local
game3-node = { path = "game3", default-features = false, optional = true }
devnet = { path = "devnet", default-features = false, optional = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
aura = ["sc-consensus-aura"]
default = ["with-game3"]

std = []

runtime-benchmarks = ["game3-node/runtime-benchmarks", "aura"]

with-game3 = ["game3-node"]

with-dev = ["with-dev"]
