[package]
name = "gafi-primitives"
version = "4.0.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
scale-info = {version = "2.1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.119"}

frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "gafi-dot-v1.1.0"}
sp-runtime = {default-features = false, version = "6.0.0", git = "https://github.com/cryptoviet/substrate", branch = "gafi-dot-v1.1.0"}
sp-std = {default-features = false, version = "4.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "gafi-dot-v1.1.0"}
sp-io = {default-features = false, version = "6.0.0", git = "https://github.com/cryptoviet/substrate", branch = "gafi-dot-v1.1.0"}


[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "frame-support/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
]
