[package]
edition = "2021"
name = "gafi-support"
version = "4.0.0-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
scale-info = {version = "2.1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.119"}

frame-support = {workspace = true, default-features = false}
pallet-nfts = {workspace = true, default-features = false}
sp-core = {workspace = true, default-features = false}
sp-io = {workspace = true, default-features = false}
sp-runtime = {workspace = true, default-features = false}
sp-std = {workspace = true, default-features = false}

[features]
default = ["std"]
runtime-benchmarks = []
std = [
  "codec/std",
  "serde/std",
  "frame-support/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "sp-core/std",
  "pallet-nfts/std",
]
