[package]
edition = "2021"
name = "gafi-support"
version = "4.0.0-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
  "derive",
]}
serde = {workspace = true, features = ["derive"]}


frame-benchmarking = {workspace = true, default-features = false, optional = true}
frame-support = {default-features = false, workspace = true}
frame-system = {vdefault-features = false, workspace = true}
scale-info = {version = "2.7.0", default-features = false, features = ["derive"]}
sp-core = {workspace = true, default-features = false}
sp-std = {workspace = true, default-features = false}
sp-runtime = {workspace = true, default-features = false}

[dev-dependencies]

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
  "codec/std",
  "serde/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-core/std",
  "sp-std/std",
  "sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]

# SBP-M2: Please remove commented code.
# [package.metadata.docs.rs]
# targets = ["x86_64-unknown-linux-gnu"]

# [dependencies]
# codec = {package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"]}
# scale-info = {version = "2.5.0", default-features = false, features = ["derive"]}

# frame-support = {workspace = true, default-features = false}
# sp-io = {workspace = true, default-features = false}

# [features]
# default = ["std"]
# runtime-benchmarks = []
# std = [
#   "codec/std",
#   "serde/std",
#   "frame-support/std",
#   "scale-info/std",
#   "sp-runtime/std",
#   "sp-std/std",
#   "sp-io/std",
#   "sp-core/std",
# ]
# try-runtime = ["frame-support/try-runtime"]
