[package]
edition = {workspace = true}
name = "gafi-support"
version = "4.0.0-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
  "derive",
]}
serde = {workspace = true, features = ["derive"]}


frame-benchmarking = {workspace = true, default-features = false, optional = true}
frame-support = {default-features = false, workspace = true}
frame-system = {vdefault-features = false, workspace = true}
scale-info = {version = "2.8.0", default-features = false, features = ["derive"]}
sp-core = {workspace = true, default-features = false}
sp-std = {workspace = true, default-features = false}
sp-runtime = {workspace = true, default-features = false}

[dev-dependencies]

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
  "codec/std",
  "serde/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-core/std",
  "sp-std/std",
  "sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]
