[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io/"
license = "Unlicense"
name = "test"
publish = false
repository = "https://github.com/cryptoviet/gafi"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
  "derive",
]}

# Substrate
frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
frame-system = {default-features = false, version = "4.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
sp-core = {default-features = false, version = "5.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
sp-io = {default-features = false, version = "5.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
sp-runtime = {version = "5.0.0", default-features = false, git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
sp-std = {version = "4.0.0", default-features = false, git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}

[dev-dependencies]
hex-literal = { version = "0.3.4" }
more-asserts = { version = "0.2.2" }
rand = { version = "0.8.5" }
hex = { version = "0.4" }
serde_json = "1.0.59"

# Frontier
fp-self-contained = {default-features = false, git = "https://github.com/cryptoviet/frontier", branch = "aur-dot"}
pallet-ethereum = {default-features = false, git = "https://github.com/cryptoviet/frontier", branch = "aur-dot"}
pallet-evm = {default-features = false, git = "https://github.com/cryptoviet/frontier", branch = "aur-dot"}

# Substrate
pallet-balances = {default-features = false, version = "4.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
pallet-transaction-payment = {default-features = false, version = "4.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
utils = {default-features = false, version = "4.0.0-dev", path = "../utils" }
gafi-primitives = { default-fetures = false, version = "4.0.0-dev", path = "../primitives" }
sp-core = {default-features = false, version = "5.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
sp-io = {default-features = false, version = "5.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
sp-runtime = {default-features = false, version = "5.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
pallet-timestamp = {default-features = false, version = "4.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
parity-secp256k1 = {  default-features = false, version = "0.7.0", git = "https://github.com/cryptoviet/rust-secp256k1" }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
pallet-randomness-collective-flip = {default-features = false, version = "4.0.0-dev", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}

# Local
upfront-pool = { default-features = false, version = "4.0.0-dev", path = "../pallets/upfront-pool" }
staking-pool = { default-features = false, version = "4.0.0-dev", path = "../pallets/staking-pool" }
sponsored-pool =  { default-features = false, version = "4.0.0-dev", path = "../pallets/sponsored-pool" }
pallet-pool =  { default-features = false, version = "4.0.0-dev", path = "../pallets/pool" }
gafi-tx = { default-features = false, version = "4.0.0-dev", path = "../pallets/gafi-tx" }
proof-address-mapping = { default-features = false, version = "4.0.0-dev", path = "../pallets/address-mapping" }

[features]
default = ["std"]
std = [
  'codec/std',
  'sp-io/std',
  'sp-core/std',
  'sp-std/std',
  'sp-runtime/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-balances/std',
  'pallet-evm/std',
  'pallet-ethereum/std',
  'fp-self-contained/std',
  'pallet-transaction-payment/std',
  'pallet-randomness-collective-flip/std',
  'proof-address-mapping/std',
  'upfront-pool/std',
  'pallet-pool/std',
  'sponsored-pool/std',
  'staking-pool/std',
  'gafi-tx/std',
  'utils/std',
  'gafi-primitives/std',
]
