[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io/"
license = "Unlicense"
name = "test"
publish = false
repository = "https://github.com/grindytech/gafi"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}

# Substrate
frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
frame-system = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
scale-info = {version = "2.1.0", default-features = false, features = ["derive"]}
sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-io = {default-features = false, version = "6.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-runtime = {version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-std = {version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}

[dev-dependencies]
hex-literal = { version = "0.3.4" }
more-asserts = { version = "0.2.2" }
rand = { version = "0.8.5" }
hex = { version = "0.4" }
serde_json = "1.0.59"

# Frontier
fp-self-contained = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}
pallet-ethereum = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}
pallet-evm = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.26"}

# Substrate
pallet-balances = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
pallet-transaction-payment = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
gu-ethereum = {default-features = false, version = "4.0.0-dev", path = "../utils/ethereum" }
gafi-primitives = { default-fetures = false, version = "4.0.0-dev", path = "../primitives" }
sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-io = {default-features = false, version = "6.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
sp-runtime = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
pallet-timestamp = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}
parity-secp256k1 = {  default-features = false, version = "0.7.0", git = "https://github.com/paritytech/rust-secp256k1" }
pallet-randomness-collective-flip = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"}

# Local
upfront-pool = { default-features = false, version = "4.0.0-dev", path = "../pallets/upfront-pool" }
staking-pool = { default-features = false, version = "4.0.0-dev", path = "../pallets/staking-pool" }
sponsored-pool =  { default-features = false, version = "4.0.0-dev", path = "../pallets/sponsored-pool" }
pallet-pool =  { default-features = false, version = "4.0.0-dev", path = "../pallets/pool" }
gafi-tx = { default-features = false, version = "4.0.0-dev", path = "../pallets/gafi-tx" }
proof-address-mapping = { default-features = false, version = "4.0.0-dev", path = "../pallets/address-mapping" }
pallet-cache = {version = "4.0.0-dev", default-features = false, path = "../pallets/pallet-cache"}
pallet-pool-names = {version = "4.0.0-dev", default-features = false, path = "../pallets/pool-names"}
game-creator = {version = "4.0.0-dev", default-features = false, path = "../pallets/game-creator"}
pallet-player = {version = "4.0.0-dev", default-features = false, path = "../pallets/player"}
gu-mock = { version = "4.0.0-dev", default-features = false, path = "../utils/mock" }

[features]
default = ["std"]
std = [
  'codec/std',
  'sp-io/std',
  'sp-core/std',
  'sp-std/std',
  'sp-runtime/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-balances/std',
  'pallet-evm/std',
  'pallet-ethereum/std',
  'fp-self-contained/std',
  'pallet-transaction-payment/std',
  'pallet-randomness-collective-flip/std',
  'proof-address-mapping/std',
  'upfront-pool/std',
  'pallet-pool/std',
  'sponsored-pool/std',
  'staking-pool/std',
  'gafi-tx/std',
  'gu-ethereum/std',
  'gafi-primitives/std',
  'pallet-cache/std',
  'game-creator/std',
  'pallet-player/std'
]
