[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "test"
publish = false
repository = "https://github.com/grindytech/gafi"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

[dev-dependencies]
codec = {package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"]}

hex = {version = "0.4"}
hex-literal = {version = "0.3.4"}
more-asserts = {version = "0.2.2"}
parity-secp256k1 = {default-features = false, version = "0.7.0", git = "https://github.com/paritytech/rust-secp256k1"}
rand = {version = "0.8.5"}
serde_json = "1.0.59"

# Frontier
fp-self-contained = {workspace = true}
pallet-ethereum = {workspace = true}
pallet-evm = {workspace = true}

# Substrate
frame-support = {default-features = false, workspace = true}
pallet-balances = {default-features = false, workspace = true}
pallet-nicks = {workspace = true}
pallet-insecure-randomness-collective-flip = {default-features = false, workspace = true}
pallet-timestamp = {default-features = false, workspace = true}
pallet-transaction-payment = {default-features = false, workspace = true}
sp-core = {default-features = false, workspace = true}
sp-io = { workspace = true, default-features = false}
sp-runtime = {default-features = false, workspace = true}

frame-system = {default-features = false, workspace = true}
scale-info = {default-features = false, features = ["derive"]}
sp-std = {default-features = false, workspace = true}

# Local
funding-pool = {default-features = false, version = "4.0.0-dev", path = "../pallets/funding-pool"}
gafi-support = {default-fetures = false, version = "4.0.0-dev", path = "../support"}
gafi-tx = {default-features = false, version = "4.0.0-dev", path = "../pallets/gafi-tx"}
game-creator = {version = "4.0.0-dev", default-features = false, path = "../pallets/game-creator"}
gu-ethereum = {default-features = false, version = "4.0.0-dev", path = "../utils/ethereum"}
gu-mock = {version = "4.0.0-dev", default-features = false, path = "../utils/mock"}
pallet-cache = {version = "4.0.0-dev", default-features = false, path = "../pallets/pallet-cache"}
pallet-player = {version = "4.0.0-dev", default-features = false, path = "../pallets/player"}
pallet-pool = {default-features = false, version = "4.0.0-dev", path = "../pallets/pool"}
proof-address-mapping = {default-features = false, version = "4.0.0-dev", path = "../pallets/address-mapping"}
staking-pool = {default-features = false, version = "4.0.0-dev", path = "../pallets/staking-pool"}
upfront-pool = {default-features = false, version = "4.0.0-dev", path = "../pallets/upfront-pool"}

[features]
default = ["std"]
std = [
  'sp-core/std',
  'sp-std/std',
  'sp-runtime/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-balances/std',
  'pallet-evm/std',
  'pallet-ethereum/std',
  'fp-self-contained/std',
  'pallet-transaction-payment/std',
  'pallet-insecure-randomness-collective-flip/std',
  'proof-address-mapping/std',
  'upfront-pool/std',
  'pallet-pool/std',
  'funding-pool/std',
  'staking-pool/std',
  'gafi-tx/std',
  'gu-ethereum/std',
  'gafi-support/std',
  'pallet-cache/std',
  'game-creator/std',
  'pallet-player/std',
  'pallet-nicks/std',
  'sp-io/std',
]
