[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = { version = "0.10", default-features = false }

parity-secp256k1 = { version = "0.7.0", default-features = false, git = "https://github.com/cryptoviet/rust-secp256k1" }
sp-runtime = {version = "5.0.0", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
sp-io = {version = "5.0.0", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}
sp-core = {version = "5.0.0", git = "https://github.com/cryptoviet/substrate", branch = "aur-dot"}

[dev-dependencies]
hex-literal = "0.2.1"

