[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
name = "game-nfts"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}

frame-benchmarking = {workspace = true, default-features = false, optional = true}
frame-support = {workspace = true, default-features = false}
frame-system = {workspace = true, default-features = false}
pallet-nfts = {workspace = true, default-features = false}
scale-info = {default-features = false, features = ["derive"]}
sp-core = {workspace = true, default-features = false}
sp-runtime = {workspace = true, default-features = false}
pallet-balances = {workspace = true, default-features = false}
gafi-support = {version = "4.0.0-dev", path = "../../support", default-features = false}

[dev-dependencies]
sp-core = {workspace = true, default-features = false}
sp-io = {workspace = true, default-features = false}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-core/std",
  "sp-runtime/std",
  "pallet-nfts/std",
  "pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]
