[package]
name = "oracle-randomness"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.19", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-system = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Local
gafi-support = { version = "4.0.0-dev", default-features = false, path = "../../support" }

[dev-dependencies]
rand = "0.8"
sp-core = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"gafi-support/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
